[gd_scene load_steps=2 format=3 uid="uid://buy45rlj8repw"]

[ext_resource type="Script" uid="uid://dqc2ke4ee6a37" path="res://Scenes/GUI/main_menu.gd" id="1_gv7mq"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_gv7mq")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameNameContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 100
theme_override_constants/margin_bottom = 100

[node name="GameName" type="Label" parent="Panel/VBoxContainer/GameNameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 200
text = "是男人就上100层"
horizontal_alignment = 1

[node name="MenuButtons" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MenuButtons"]
layout_mode = 2

[node name="StartBtn" type="Button" parent="Panel/VBoxContainer/MenuButtons/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "开始游戏"

[node name="ExitBtn" type="Button" parent="Panel/VBoxContainer/MenuButtons/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "结束游戏"
